@@ -2,12 +2,15 @@ package al.bytesquad.petstoreandclinic.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import springfox.documentation.builders.ApiInfoBuilder;
 import springfox.documentation.builders.PathSelectors;
 import springfox.documentation.builders.RequestHandlerSelectors;
 import springfox.documentation.service.*;
 import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
+import springfox.documentation.swagger.web.SecurityConfiguration;
+import springfox.documentation.swagger.web.SecurityConfigurationBuilder;
 
 import java.util.Arrays;
 import java.util.Collections;
@@ -18,44 +21,49 @@ public class SwaggerConfig {
 
     public static final String AUTHORIZATION_HEADER = "Authorization";
 
-    private ApiKey apiKey(){
+    private ApiKey apiKey() {
         return new ApiKey("JWT", AUTHORIZATION_HEADER, "header");
     }
 
-    private ApiInfo apiInfo(){
-        return new ApiInfo(
-                "Spring Boot PetStoreAndClient REST APIs",
-                "Spring Boot PetStoreAndClient REST API Documentation",
-                "1",
-                "Terms of Service",
-                new Contact("Kleo Kocaqi", "www.javaguides.net", "kocaqikleo@gmail.com"),
-                "License of API",
-                "API license URL",
-                Collections.emptyList()
-        );
+    private ApiInfo apiInfo() {
+        return new ApiInfoBuilder()
+                .title("Spring Boot PetStoreAndClient REST APIs")
+                .description("Spring Boot PetStoreAndClient REST API Documentation")
+                .version("1")
+                .termsOfServiceUrl("Terms of Service")
+                .contact(new Contact("Kleo Kocaqi", "www.javaguides.net", "kocaqikleo@gmail.com"))
+                .license("License of API")
+                .licenseUrl("API license URL")
+                .build();
     }
 
     @Bean
-    public Docket api(){
+    public Docket api() {
         return new Docket(DocumentationType.SWAGGER_2)
                 .apiInfo(apiInfo())
                 .securityContexts(Collections.singletonList(securityContext()))
-                .securitySchemes(List.of(apiKey()))
+                .securitySchemes(Collections.singletonList(apiKey()))
                 .select()
-                .apis(RequestHandlerSelectors.any())
+                .apis(RequestHandlerSelectors.basePackage("al.bytesquad.petstoreandclinic.controller"))
                 .paths(PathSelectors.any())
                 .build();
     }
 
-    private SecurityContext securityContext(){
+    private SecurityContext securityContext() {
         return SecurityContext.builder().securityReferences(defaultAuth()).build();
     }
 
-    private List<SecurityReference> defaultAuth(){
+    private List<SecurityReference> defaultAuth() {
         AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
         AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
         authorizationScopes[0] = authorizationScope;
-        return List.of(new SecurityReference("JWT", authorizationScopes));
+        return Collections.singletonList(new SecurityReference("JWT", authorizationScopes));
     }
 
+    @Bean
+    public SecurityConfiguration security() {
+        return SecurityConfigurationBuilder.builder().scopeSeparator(",")
+                .additionalQueryStringParams(null)
+                .useBasicAuthenticationWithAccessCodeGrant(false).build();
+    }
 }
